--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,21 @@
 server:
-  port: 8080
+  port: ${APP_PORT:8080}
 
 spring:
   application:
     name: inditex-technical-test
+  datasource:
+    url: ${DATABASE_CONNECTION}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
+    initialization-mode: always
+    initialize: false
+  jpa:
+    database-platform: ${DATABASE_DIALECT}
+    database: {$DATABASE_TYPE}
+    openInView: false
+    show_sql: true
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+    defer-datasource-initialization: true
